--- a/commands/plan/ask-me.toml
+++ b/commands/plan/ask-me.toml
@@ -14,11 +14,19 @@ name = "plan:ask-me"
 description = "Asks questions iteratively to develop a thorough, step-by-step spec for an idea"
 
 prompt = """
-Ask me one question at a time so we can develop a thorough, step-by-step spec for this idea.
-Each question should build on my previous answers, and our end goal is to have a detailed specification I can hand off to a developer.
-Let’s do this iteratively and dig into every relevant detail. Remember, only one question at a time.
+Ask me one question at a time so we can develop a thorough, step-by-step spec for this idea. Our goal is to have a detailed specification.
 
-Here’s the idea:
+Let's structure our conversation around these key areas, in order:
+1.  **Functional Requirements:** What should the project do?
+2.  **Non-Functional Requirements:** What are the constraints (performance, security, etc.)?
+3.  **Architecture:** What tech stack and design patterns are preferred?
+4.  **Data Handling:** How should data be stored, processed, and output?
+5.  **Error Handling:** How should the system behave on failure?
+6.  **Testing Plan:** How will we ensure the project is working correctly?
+
+Start by asking me a question about the **Functional Requirements**. Remember, only one question at a time.
+
+Here's the idea:
 
 ```
 {{args}}
