--- a/commands/project/spec.toml
+++ b/commands/project/spec.toml
@@ -1,5 +1,5 @@
 # ---------------------------------------------------------------------------
-# Command: /project:init
+# Command: /project:spec
 #
 # Description:
 #   Initiates an iterative process to develop a detailed specification for an
@@ -7,11 +7,11 @@
 #   answers to create a thorough spec.
 #
 # Usage Example:
-#   /project:init A mobile app that tracks personal reading habits
+#   /project:spec A mobile app that tracks personal reading habits
 # ---------------------------------------------------------------------------
 
-name = "project:init"
-description = "Asks questions iteratively to develop a thorough, step-by-step spec for an idea"
+name = "project:spec"
+description = "Asks questions iteratively to develop a thorough, step-by-step specification for an idea"
 
 prompt = """
 Ask me one question at a time so we can develop a thorough, step-by-step spec for this idea. Our goal is to have a detailed specification.
