--- a/commands/setup/config.toml
+++ b/commands/setup/config.toml
@@ -2,7 +2,7 @@
 # Command: /project:config-create
 #
 # Description:
-#   Creates a harper.config.toml file in the current directory with
+#   Creates a project.config.toml file in the current directory with
 #   customizable settings. This is optional - all commands work without it.
 #
 # Usage Example:
@@ -12,10 +12,10 @@
 # ---------------------------------------------------------------------------
 
 name = "project:config-create"
-description = "Creates an optional harper.config.toml file in your project"
+description = "Creates an optional project.config.toml file in your project"
 
 prompt = """
-I'll create a `harper.config.toml` file in your current directory to customize Harper Prompts behavior.
+I'll create a `project.config.toml` file in your current directory to customize Harper Prompts behavior.
 
 **Note:** This is completely optional! All commands work fine without a config file using sensible defaults.
 
