--- a/commands/project/initiate.toml
+++ b/commands/project/initiate.toml
@@ -1,5 +1,5 @@
 # ---------------------------------------------------------------------------
-# Command: /project:spec
+# Command: /project:initiate
 #
 # Description:
 #   Initiates an iterative process to develop a detailed specification for an
@@ -7,16 +7,18 @@
 #   answers to create a thorough spec.
 #
 # Usage Example:
-#   /project:spec A mobile app that tracks personal reading habits
+#   /project:initiate A mobile app that tracks personal reading habits
 # ---------------------------------------------------------------------------
 
-name = "project:spec"
+name = "project:initiate"
 description = "Asks questions iteratively to develop a thorough, step-by-step specification for an idea"
 
 prompt = """
-Ask me one question at a time so we can develop a thorough, step-by-step spec for this idea. Our goal is to have a detailed specification.
+Ask me one question at a time so we can develop a thorough, step-by-step spec for this idea.
+Our goal is to have a detailed specification.
 
 Let's structure our conversation around these key areas, in order:
+
 1.  **Functional Requirements:** What should the project do?
 2.  **Non-Functional Requirements:** What are the constraints (performance, security, etc.)?
 3.  **Architecture:** What tech stack and design patterns are preferred?
