refactor(project): Align project command names and fix documentation
This commit aligns the naming of the `/project` commands and fixes inconsistencies in the documentation.

- Renamed `/project:spec` to `/project:initiate` to better reflect its purpose of initiating the project specification.
- Renamed `/project:spec-create` to `/project:create` for consistency.
- Updated `README.md` and `commands/project/docs/workflow.md` to reflect the new command names and clarify the workflow.
- Corrected typos in `plan.toml`, `execute.toml`, and `workflow.md` (planing.md -> planning.md).

--- a/commands/project/create.toml
+++ b/commands/project/create.toml
@@ -9,7 +9,7 @@
 #   /project:spec-create
 # ---------------------------------------------------------------------------
 
-name = "project:spec-create"
+name = "project:create"
 description = "Compiles brainstorming findings into a developer-ready specification"
 
 prompt = """
