--- a/commands/review/code.toml
+++ b/commands/review/code.toml
@@ -12,7 +12,9 @@ name = "review:code"
 description = "Performs general code review of new/modified code"
 
 prompt = """
-Great, now I want you to carefully read over all of the new code you just wrote and other existing code you just modified with "fresh eyes," looking super carefully for any obvious bugs, errors, problems, issues, confusion, etc.
+Great, now I want you to carefully read over all of the new code you just wrote and other
+existing codebase you just modified with "fresh eyes," looking super carefully for any obvious bugs,
+errors, problems, issues, confusion, etc.
 
 Once you are done, spend some time fixing the issues.
 """
